crates/ruff_python_parser/tests/snapshots/valid_syntax@del_debug_py38.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/del_debug_py38.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..57,
        body: [
            Delete(
                StmtDelete {
                    node_index: NodeIndex(None),
                    range: 43..56,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 47..56,
                                id: Name("__debug__"),
                                ctx: Del,
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
