crates/ruff_python_parser/tests/snapshots/valid_syntax@except_stmt_as_name_soft_keyword.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/except_stmt_as_name_soft_keyword.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..100,
        body: [
            Try(
                StmtTry {
                    node_index: NodeIndex(None),
                    range: 0..99,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 5..8,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 5..8,
                                    },
                                ),
                            },
                        ),
                    ],
                    handlers: [
                        ExceptHandler(
                            ExceptHandlerExceptHandler {
                                range: 9..39,
                                node_index: NodeIndex(None),
                                type_: Some(
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 16..25,
                                            id: Name("Exception"),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                                name: Some(
                                    Identifier {
                                        id: Name("match"),
                                        range: 29..34,
                                        node_index: NodeIndex(None),
                                    },
                                ),
                                body: [
                                    Expr(
                                        StmtExpr {
                                            node_index: NodeIndex(None),
                                            range: 36..39,
                                            value: EllipsisLiteral(
                                                ExprEllipsisLiteral {
                                                    node_index: NodeIndex(None),
                                                    range: 36..39,
                                                },
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                        ExceptHandler(
                            ExceptHandlerExceptHandler {
                                range: 40..69,
                                node_index: NodeIndex(None),
                                type_: Some(
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 47..56,
                                            id: Name("Exception"),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                                name: Some(
                                    Identifier {
                                        id: Name("case"),
                                        range: 60..64,
                                        node_index: NodeIndex(None),
                                    },
                                ),
                                body: [
                                    Expr(
                                        StmtExpr {
                                            node_index: NodeIndex(None),
                                            range: 66..69,
                                            value: EllipsisLiteral(
                                                ExprEllipsisLiteral {
                                                    node_index: NodeIndex(None),
                                                    range: 66..69,
                                                },
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                        ExceptHandler(
                            ExceptHandlerExceptHandler {
                                range: 70..99,
                                node_index: NodeIndex(None),
                                type_: Some(
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 77..86,
                                            id: Name("Exception"),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                                name: Some(
                                    Identifier {
                                        id: Name("type"),
                                        range: 90..94,
                                        node_index: NodeIndex(None),
                                    },
                                ),
                                body: [
                                    Expr(
                                        StmtExpr {
                                            node_index: NodeIndex(None),
                                            range: 96..99,
                                            value: EllipsisLiteral(
                                                ExprEllipsisLiteral {
                                                    node_index: NodeIndex(None),
                                                    range: 96..99,
                                                },
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                    orelse: [],
                    finalbody: [],
                    is_star: false,
                },
            ),
        ],
    },
)
```
